# accelges

./: ProjectHome.md  README  accelges_svn.bb  autogen-om.sh  autogen.sh  configure.ac  gestures_svn.bb  makefile.am
trunk/: autogen-om.sh  autogen-pc.sh  configure.ac
trunk/accelneo/src/: accelneo.c
trunk/accelsim/: makefile.am
trunk/accelwii/src/: accelwii.c
trunk/config/init.d/: gesd-neo3
trunk/config/neo2/: down-and-up.model  down_up.model  forward-backward.model  fw_bw_fw_bw.model  horizontal-circle.model  left-and-right.model  left.model  left_right.model  neo2.cfg  right-and-left.model  right.model  right_left.model  roll.model  up-and-down.model  up.model
trunk/config/wii/: down.model  forward.model  forward_test_2.accel  forward_train_2.accel  left.model  left_test_2.accel  left_train_1.accel  left_train_5.accel  left_train_6.accel  left_train_7.accel  right.model  right_train_1.accel  right_train_2.accel  right_train_7.accel  up.model  up_train_3.accel  up_train_7.accel  wii.cfg
trunk/db-accel/neo2/: circle_1.accel  down_2.accel  down_3.accel  down_up_1.accel  down_up_3.accel  fw_bw_fw_bw_1.accel  fw_bw_fw_bw_3.accel  left_2.accel  left_3.accel  left_right_1.accel  left_right_2.accel  left_right_3.accel  right_2.accel  right_left_1.accel  roll_1.accel  roll_3.accel  up_1.accel  up_2.accel  z_1.accel  z_2.accel  z_3.accel
trunk/db-accel/wii/: down_train_2.accel  forward_test_1.accel  left_test_1.accel  left_train_2.accel  left_train_3.accel  right_test_2.accel  (+4 more)
trunk/gesd/: makefile.am
trunk/gesl/: makefile.am
trunk/gesm/: makefile.am
(+209 files in other folders)
