AC_PREREQ([2.53])

AC_INIT([gestures], [0.1], [http://gestures.borza.ro])
AM_INIT_AUTOMAKE([subdir-objects])
AM_MAINTAINER_MODE

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_HEADER_STDC

AC_HEADER_TIME

AC_C_BIGENDIAN

#AC_ISC_POSIX
#AC_PROG_CC
#AC_PROG_CC_STDC
#AC_STDC_HEADERS
#AC_PROG_LIBTOOL

CFLAGS="-Wall $CFLAGS"

AC_OUTPUT([
makefile
accelneo/makefile
accelwii/makefile
ges/makefile
gesd/makefile
gesm/makefile
])
